# velin

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Readme.md  example.rst  pyproject.toml
tests/: test_examples.py
velin/: __init__.py  __main__.py  examples_section_utils.py  ref.py
velin2/: __main__.py  context.py  docstring.py  main.py  parser.py  python.py  report.py  rules.py  tree.py
velin2/rules/: __init__.py  core.py  sections.py  violation.py
velin2/tests/: test_section_rules.py
