[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "velin"
authors = [{name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com"}]
readme = "Readme.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version","description"]
requires-python=">=3.8"
requires=[
    "numpydoc",
    "pygments",
    "black",
    "there"
]

[project.scripts]
velin = "velin:main"

[project.urls]
Home = "https://github.com/Carreau/velin"
