[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "velin"
authors = [{name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "Readme.md"
license = {file = "LICENSE"}
dynamic = ["version","description"]
requires-python=">=3.8"
dependencies=[
    "numpydoc",
    "pygments",
    "black",
    "there"
]

[project.scripts]
velin = "velin:main"

[project.urls]
Home = "https://github.com/Carreau/velin"

[tool.isort]
profile = "black"
skip_gitignore = "true"
force_to_top = "true"
default_section = "THIRDPARTY"
known_first_party = "velin2"
