[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "velin"
authors = [{name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "Readme.md"
license = {file = "LICENSE"}
dynamic = ["version","description"]
requires-python=">=3.8"
dependencies=[
    "numpydoc",
    "pygments",
    "black",
    "there"
]

[project.scripts]
velin = "velin:main"

[project.urls]
Home = "https://github.com/Carreau/velin"

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
    ".git",
    ".eggs",
    "build",
    "dist",
    "__pycache__",
    "docs",
]
target-version = "py310"

extend-include = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # Pycodestyle
    "I", # isort
    "UP", # Pyupgrade
    "TID", # tidy imports
]
ignore = [
    "E402", # E402: module level import not at top of file
    "E501", # E501: line too long - let black worry about that
    "E731", # E731: do not assign a lambda expression, use a def
]
fixable = ["I"]
extend-safe-fixes = [
    "TID252",  # absolute imports
]


[tool.ruff.lint.isort]
known-first-party = ["velin"]
known-third-party = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
